examples/test/conf/EdgionTls/port_only/EndpointSlice.yaml
# EdgionTls port-only binding EndpointSlice
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: test-http-slice
  namespace: edgion-test
  labels:
    kubernetes.io/service-name: test-http
addressType: IPv4
endpoints:
  - addresses:
      - "127.0.0.1"
    conditions:
      ready: true
ports:
  - port: 30001
    protocol: TCP
